--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,8 @@ html, body {
 .slider-content {
     position: absolute;
     top: 50%;
-    left: 25%;
+    left: 30%;
+    width: 50%;
     transform: translate(-50%, -50%);
     text-align: left;
 }
@@ -54,7 +55,7 @@ p {
     line-height: 1.5em;
 }
 .slider-content p{
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: 300;
     color: #FFF;
 }
@@ -134,7 +135,7 @@ p {
 .skill img {
 
     width: 200px;
-    height: 100%;
+    max-height: 100px;
     aspect-ratio: 1px /1px;
     object-fit: contain;
 }
@@ -246,11 +247,15 @@ header {
     background-color: #f2f2f2;
 }
 
+.header-menu li:last-child a {
+    background-color: green;
+}
+
 .header-menu-mobile{
     display: none;
 }
 
-
+/* Version mobile  */
 @media (max-width:  810px) {
 
     header {
@@ -264,6 +269,7 @@ header {
         z-index: 991;
     }
 
+
     .header-logo img {
         border-radius: 100px;
         
@@ -275,16 +281,20 @@ header {
         left: 0;
         width: 100%;
         height: 100vh;
-        background: #f2f2f2;
+        background: #FFF;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        gap: 10px;
+        gap: 30px;
         display: none;
     }
 
+    .header-menu li:last-child a {
+        padding-top: 10px;
+    }
+
     .activ {
-        display: block;
+        display: flex;
     }
 
     .header-menu-mobile{
@@ -303,13 +313,13 @@ header {
     }
 
     .slider-content {
-        width: 90%;
+        width: 50%;
 
     }
 
     .slider-content p {
         margin-top: 20px;
-        font-size: 1.5rem;
+        font-size: 0.7rem;
         text-wrap: balance;
     }
 
