--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ html, body {
    
 }
 
+link[rel="shortcut icon"] {
+    pointer-events: none;
+}
+
 .slider{
     display: flex;
     justify-content: space-between;
