--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ p {
 
 .section {
     padding-top: 50px;
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     padding-right: 0px;
     padding-left: 0;
 }
@@ -133,6 +133,8 @@ p {
     
 }
 
+
+
 .skill {
     background: #333;
     border-radius: 15px;
@@ -140,7 +142,7 @@ p {
     box-sizing: border-box;
     /* max-width: 200px; */
     width: 400px;
-    max-height: 200px;
+    max-height: 400px;
     margin-bottom: 40px;
 }
 
@@ -158,6 +160,70 @@ p {
 .skill h3 {
     margin-top: 10px;
 }
+
+.modal-centered-fixed {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 80vw;
+  max-width: 80vw;
+  margin: auto;
+  padding-top: 10%;
+  padding-left: 15%;
+  padding-right: 15%;
+}
+
+.modal-centered-fixed .modal-content {
+  width: 100%;
+  max-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+
+/* Zone image carousel */
+.modal-centered-fixed .modal-body {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+}
+
+.carousel-item {
+  transition: none !important;
+}
+
+
+/* Style nav bar */
+/* Style général des liens du menu */
+.navbar-nav .nav-link {
+  transition: color 2s ease;
+}
+
+/* Hover pour tous les liens SAUF le bouton Contact */
+.navbar-nav .nav-link:not(.contact-btn):hover {
+  color: #000 !important;
+  background-color: #3333;
+  border-radius: 8px;
+}
+
+.contact-btn:hover {
+  border-radius: 8px;
+}
+
+/* Style spécifique au bouton Contact */
+.contact-btn {
+  background-color: green;
+  color: white !important;
+  padding: 6px 12px;
+  border-radius: 4px;
+  font-weight: 500;
+  transition: none; /* pas d'effet de transition */
+}
+
+
 
 .realisation {
     height: auto;
@@ -231,7 +297,44 @@ p {
     align-items: center;
 }
 
-header {
+/* Navigation  */
+nav.navbar {
+  padding-top: 0.3rem;
+  padding-bottom: 0.3rem;
+}
+
+nav.navbar a {
+  text-decoration: none;
+  color: #f2f1f1;
+  padding: 10px 20px;
+  transition: 0.2s ease;
+  font-size: larger;
+}
+
+.theme-color {
+  background-color: rgb(255, 255, 255);
+}
+
+#logo {
+  height: 5vh;
+  border-radius: 50%;
+}
+
+/* Réduit la taille du titre */
+.navbar-brand h2 {
+  font-size: 1.2rem; /* ou utilise une classe comme fs-5 */
+  margin-bottom: 0;
+}
+
+/* Réduit l'espacement vertical des liens */
+.nav-link {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
+
+/* Header */
+/* header {
     position: fixed;
     top: 0;
     left: 0;
@@ -240,7 +343,7 @@ header {
     z-index: 999;
     padding-block: 5px;
     box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.7);
-}
+} */
 
 .header-logo {
     display: block;
@@ -250,7 +353,7 @@ header {
     width: 60px;
 }
 
-.header-menu {
+/* .header-menu {
     display: flex;
     align-items: center;
     list-style: none;
@@ -277,7 +380,7 @@ header {
 
 .header-menu-mobile{
     display: none;
-}
+} */
 
 .competances{
     display: flex;
@@ -463,5 +566,22 @@ header {
     .contact {
         width: auto;
     }
+
+  .modal-centered-fixed {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 25%;
+    transform: translate(-50%, -50%);
+    width: 100vw;
+    height: auto;
+    max-width: 100vw;
+    padding: 0;
+  }
+
+  .modal-centered-fixed .modal-content {
+    max-height: 90vh;
+  }
 
 }
